[package]
name = "esp-storage"
version = "0.2.0"
edition = "2021"
authors = [
    "The ESP-RS team",
    "Björn Quentin <bjoern.quentin@mobile-j.de>",
]
description  = "Implementation of embedded-storage traits to access unencrypted ESP32 flash"
repository   = "https://github.com/esp-rs/esp-storage"
license      = "MIT OR Apache-2.0"

keywords = [
    "embedded-storage",
    "esp",
    "no-std",
]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]

[dependencies]
embedded-storage = "0.3.0"
critical-section = { version =  "1.0.1", optional = true }

# specifying dev dependencies by target is less than ideal - however we cannot have feature gated dev-dependencies

[target.riscv32imc-unknown-none-elf.dev-dependencies]
esp32c3-hal = { version = "0.9.0" }
esp-println = { version = "0.5.0", features = [ "esp32c3" ] }
esp-backtrace = { version = "0.6.0", features = [ "esp32c3", "panic-handler", "exception-handler", "print-uart"] }

[target.riscv32imac-unknown-none-elf.dev-dependencies]
esp32c6-hal = { version = "0.2.0" }
esp-println = { version = "0.5.0", features = [ "esp32c6" ] }
esp-backtrace = { version = "0.6.0", features = [ "esp32c6", "panic-handler", "exception-handler", "print-uart"] }


[target.xtensa-esp32-none-elf.dev-dependencies]
esp32-hal = { version = "0.12.0" }
esp-println = { version = "0.5.0", features = [ "esp32" ] }
esp-backtrace = { version = "0.6.0", features = [ "esp32", "panic-handler", "exception-handler", "print-uart"] }

[target.xtensa-esp32s2-none-elf.dev-dependencies]
esp32s2-hal = { version = "0.9.0" }
esp-println = { version = "0.5.0", features = [ "esp32s2" ] }
esp-backtrace = { version = "0.6.0", features = [ "esp32s2", "panic-handler", "exception-handler", "print-uart"] }

[target.xtensa-esp32s3-none-elf.dev-dependencies]
esp32s3-hal = { version = "0.9.0" }
esp-println = { version = "0.5.0", features = [ "esp32s3" ] }
esp-backtrace = { version = "0.6.0", features = [ "esp32s3", "panic-handler", "exception-handler", "print-uart"] }

[[example]]
name              = "low_level"
required-features = ["low-level"]

[features]
default = ["critical-section"]
critical-section = ["dep:critical-section"]
esp32c2 = []
esp32c3 = []
esp32c6 = []
esp32h2 = []
esp32   = []
esp32s2 = []
esp32s3 = []

# this feature is reserved for very specific use-cases - usually you don't want to use this!
low-level = []
